[package]
name = "procesador-pagos"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
decimal = "2"
uuid = { version = "1", features = ["serde", "v4"]}
rust_decimal = "1.16"
rust_decimal_macros = "1.16"
chrono = { version = "0.4", features = ["serde"] }